2001-10-21  Mikael Djurfeldt  <mdj@linnaeus>

	* lib.scm: Move module the system directives `export',
	  `export-syntax', `re-export' and `re-export-syntax' into the
	  `define-module' form.  This is the recommended way of exporting
	  bindings.

2001-10-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'cond =>' syntax with
	else clause.  Changed some tests and comments related to the
	'case' form to reflect recent changes in the implementation.

2001-10-14  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'lambda' syntax.

2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added test cases for 'case' syntax.

2001-10-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Added a test case that checks if valid
	number strings are transformed correctly by string->number.

2001-09-21  Rob Browning  <rlb@defaultvalue.org>

	* tests/numbers.test (fixnum-bit): compute dynamically.

	* tests/bit-operations.test (fixnum-bit): compute dynamically.

2001-09-07  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/getopt-long.test ("apples-blimps-catalexis example",
	"multiple occurances"): New top-level sections.

2001-08-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/numbers.test:  Made some of the patterns better readable.

2001-08-25  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/srfi-19.test (test-time-comparision,
	test-time-arithmatic): New procs.

	Add time comparison tests using new procs.
	Thanks to Alex Shinn.

2001-08-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/dynamic-scope.test: New file.

2001-08-24  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* tests/srfi-13.test (string-for-each, string-for-each-index):
	Add tests.  (Thanks to Alex Shinn.)

2001-08-22  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* tests/srfi-13.test (string-map): Swapped order of string and
	proc args to conform with the srfi.  (Thanks to Alex Shinn.)
